Modification des liste de règle et de l'édition de règle Modification des ALERT Harmonisation de l'interface (les boutons en bas)